<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

<LinearLayout

    tools:context="blare.alex.postcard.Help"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:id="@+id/text_header"
        android:gravity="center"
        android:layout_marginBottom="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Information"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/text_info"
        android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/back"
            android:textSize="14sp"
            android:gravity="center"
            android:background="#ffffff"
            android:layout_marginTop="16dp"
            android:onClick="backmain_1"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
</ScrollView>