<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="16dp"
    tools:context="blare.alex.postcard.MainActivity"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:id="@+id/text_header"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:id="@+id/text_description"
        android:layout_below="@id/text_header"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/text_description"
        android:id="@+id/button_image"
        >


        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_1"
            android:layout_margin="9dp"
            android:onClick="onClick_but_im"
            android:id="@+id/button_image_1"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_2"
            android:layout_margin="9dp"
            android:onClick="onClick_but_im"
            android:id="@+id/button_image_2"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_3"
            android:layout_margin="9dp"
            android:onClick="onClick_but_im"
            android:id="@+id/button_image_3"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/button_image_a">


        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_4"
            android:layout_margin="9dp"
            android:onClick="onClick_but_im"
            android:id="@+id/button_image_4"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_5"
            android:layout_margin="9dp"
            android:onClick="onClick_but_im"
            android:id="@+id/button_image_5"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_6"
            android:layout_margin="9dp"
            android:onClick="onClick_but_im"
            android:id="@+id/button_image_6"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/info"
        android:textSize="14sp"
        android:gravity="center"
        android:background="#ffffff"
        android:onClick="but_info"
        android:padding="9dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>
